--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <h2>On the 12th of May</h2>
 <h2>What to bring</h2>
-<ul>
+<ol>
     <li>Balloons</li>
     <li>Cake</li>
-    <li>Appetite</li>
+    <li>confetti</li>
 
-</ul>
+</ol>
 <!-- Example Google Maps Link -->
 <br>
 <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Here's the location</a>
